<resources>
    <string name="app_name">Senner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome">welcome</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LogOut</string>
    <string name="hint_name">name</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_old_password">old password</string>
    <string name="hint_new_password">new password</string>
    <string name="loading">Loading...</string>
    <string name="to_login">Already registred! Login Me.</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="to_register">I need to register!</string>
    <string name="Logo">Senner</string>
    <string name="Author">by JYC</string>
    <string name="start_from_here">Start from here</string>
    <string name="do_not_go_gentle_into_that_good_night">Do not go gentle into that good night,\n Old age should burn and rave at close of day;\n Rage, rage against the dying of the light.\n Though wise men at their end know dark is right,\n Because their words had forked no lightning they Do not go gentle into that good night.\n Good men, the last wave by,\n crying how bright Their frail deeds might have danced in a green bay,\n Rage, rage against the dying of the light.\n Wild men who caught and sang the sun in flight,\n And learn, too late,\n they grieved it on its way,\n Do not go gentle into that good night.</string>
    <string name="hint_resend_code">Resend Code</string>
    <string name="Description">Designed for SHM</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
    </string-array>

</resources>
