<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_nobg"
    tools:context=".Fragment.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_nobg">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_trans"
            android:fontFamily="@font/lxgw_bold"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="MissingConstraints,RtlSymmetry" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/edit_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_trans"
            android:fontFamily="@font/lxgw_bold"
            android:textColorHint="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:padding="20dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/edit_email"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_trans"
            android:fontFamily="@font/lxgw_bold"
            android:textColorHint="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:textColor="@color/white"
            android:padding="20dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_darkblue"
            android:fontFamily="@font/lxgw_bold"
            android:text="@string/register"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/button_register"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_nobg"
            android:fontFamily="@font/lxgw_bold"
            android:text="@string/to_login"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>

</FrameLayout>